<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:key="relative_team_colors"
        android:defaultValue="true"
        android:summary="@string/relative_team_colors_summary"
        android:title="@string/relative_team_colors" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="display_champion_name"
        android:summary="@string/display_champion_name_summary"
        android:title="@string/display_champion_name" />

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <ListPreference
        android:defaultValue="enemy"
        android:entries="@array/pref_game_data_tabs_titles"
        android:entryValues="@array/pref_game_data_tabs_values"
        android:key="default_game_data_tab"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/default_tab" />

</PreferenceScreen>
