<preference-headers xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- These settings headers are only used on tablets. -->

    <header
        android:fragment="fr.neamar.lolgamedata.SettingsActivity$GeneralPreferenceFragment"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/pref_header_general" />

    <header
        android:fragment="fr.neamar.lolgamedata.SettingsActivity$CounterPreferenceFragment"
        android:icon="@drawable/ic_counter_black_24dp"
        android:title="@string/pref_header_counters" />

    <header
        android:fragment="fr.neamar.lolgamedata.SettingsActivity$NotificationPreferenceFragment"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/pref_header_notifications" />

</preference-headers>
