<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="2dp">

    <ImageView
        android:id="@+id/counter"
        android:layout_width="@dimen/champion_size"
        android:layout_height="@dimen/champion_size"
        android:contentDescription="@string/champion"
        android:src="@drawable/default_champion" />

    <ImageView
        android:id="@+id/champion"
        android:layout_width="@dimen/champion_size"
        android:layout_height="@dimen/champion_size"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:contentDescription="@string/opponent"
        android:src="@drawable/default_champion" />

    <ImageView
        android:id="@+id/counterMastery"
        android:layout_width="@dimen/champion_mastery_size_counter"
        android:layout_height="@dimen/champion_mastery_size_counter"
        android:layout_alignBottom="@+id/counter"
        android:layout_alignEnd="@+id/counter"
        android:layout_alignRight="@+id/counter"
        android:contentDescription="@string/champion_mastery"
        android:src="@drawable/champion_mastery_4" />

    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@+id/counter"
        android:layout_toLeftOf="@+id/matchupStats"
        android:layout_toRightOf="@+id/counter"
        android:layout_toStartOf="@+id/matchupStats"
        android:background="@android:color/darker_gray" />

    <TextView
        android:id="@+id/matchupStats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:text="@string/matchup_stub"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="@android:color/primary_text_light" />


    <View
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        android:layout_centerVertical="true"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_toEndOf="@+id/matchupStats"
        android:layout_toLeftOf="@+id/champion"
        android:layout_toRightOf="@+id/matchupStats"
        android:layout_toStartOf="@+id/champion"
        android:background="@android:color/darker_gray" />
</RelativeLayout>