<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!-- A CardView that contains a TextView -->
    <android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:id="@+id/championCard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:layout_marginLeft="@dimen/activity_margin"
        android:layout_marginRight="@dimen/activity_margin"
        android:layout_marginTop="4dp"
        android:foreground="?attr/selectableItemBackground"
        card_view:cardUseCompatPadding="true"
        card_view:contentPaddingTop="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingLeft="16dp"
                android:paddingRight="16dp">

                <ImageView
                    android:id="@+id/championImage"
                    android:layout_width="@dimen/champion_size"
                    android:layout_height="@dimen/champion_size"
                    android:layout_alignParentLeft="true"

                    android:layout_alignParentStart="true"
                    android:layout_centerVertical="true"
                    android:contentDescription="@string/champion_image"
                    android:src="@drawable/default_champion" />


                <TextView
                    android:id="@+id/championNameText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:layout_toEndOf="@+id/championImage"
                    android:layout_toRightOf="@+id/championImage"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/stub_champion_name"
                    android:textAppearance="?android:attr/textAppearanceLarge" />

                <TextView
                    android:id="@+id/winrateText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/championNameText"
                    android:layout_alignStart="@+id/championNameText"
                    android:layout_below="@+id/championNameText"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/s_winrate"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/disclaimer"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignLeft="@+id/winrateText"
                    android:layout_alignStart="@+id/winrateText"
                    android:layout_below="@+id/winrateText"
                    android:text="@string/patch_s"
                    android:textSize="11sp" />
            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <Button
                    android:id="@+id/spellsButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/spells"
                    style="?android:buttonBarButtonStyle"
                    android:theme="@style/PrimaryFlatButton" />

                <Button
                    android:id="@+id/championggButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/champion_gg"
                    style="?android:buttonBarButtonStyle"
                    android:theme="@style/PrimaryFlatButton" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>