<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    android:layout_marginTop="4dp"
    android:elevation="2dp"
    card_view:cardUseCompatPadding="true"
    card_view:contentPadding="16dp"
    tools:targetApi="lollipop">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/championImage"
            android:layout_width="@dimen/champion_size"
            android:layout_height="@dimen/champion_size"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:contentDescription="@string/champion_image"
            android:src="@drawable/default_champion" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/championImage"
            android:layout_toRightOf="@+id/championImage"
            android:text="@string/no_flash"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/hotStreakDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/title"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:layout_toEndOf="@+id/championImage"
            android:layout_toRightOf="@+id/championImage"
            android:text="@string/s_has_no_flash"
            android:textAppearance="?android:attr/textAppearanceSmall" />

    </RelativeLayout>
</android.support.v7.widget.CardView>